# tmux-session-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/: .gitignore  Cargo.toml
lib/src/: dir.rs  err.rs  home_dirs.rs  lib.rs  macros.rs  mocks.rs  options.rs  path.rs  test.rs
resources/examples/: README.md  example_commands.md
resources/examples/new_session_base/: new_session_base.sh
resources/examples/new_window/: new_window.sh
resources/test/script_content_checks/session/: attach_test_session.sh  detach_test_session.sh
src/: home_dirs.rs  main.rs
src/options/: mod.rs  new_session.rs  new_window.rs  parser_associated_functions.rs  parser_helpers.rs  sessions.rs  test_utils.rs
src/options/new_Session/: tests.rs
