[package]
name = "tmux-session-generator"
version = "0.1.0"
authors = ["Hugo <57953645+hugo-k-m@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3.0.2"
structopt = "0.3.23"
lib = {path="lib"}